@@ -150,6 +150,11 @@ static int scan_image (const char *filename)
                                     "I", CharPixel, blob))
             return(-1);
 
+        if(xmllvl == 1) {
+            xmllvl++;
+            printf("<source href='%s'>\n", filename);
+        }
+
         zbar_process_image(processor, zimage);
 
         // output result data
@@ -166,10 +171,6 @@ static int scan_image (const char *filename)
             else if(xmllvl < 0)
                 printf("%s\n", zbar_symbol_get_data(sym));
             else {
-                if(xmllvl < 2) {
-                    xmllvl++;
-                    printf("<source href='%s'>\n", filename);
-                }
                 if(xmllvl < 3) {
                     xmllvl++;
                     printf("<index num='%u'>\n", seq);
